[package]
name = "ulua-macros"
version = "0.11.0"
authors = ["Luc Rodriguez <labs@rhodem.com>"]
edition = "2021"
description = "Procedural macros for the ulua crate."
repository = "https://github.com/rhodem-labs/ulua"
keywords = ["lua", "ulua"]
license = "MIT"

[lib]
proc-macro = true

[features]
macros = ["proc-macro-error2", "itertools", "regex", "once_cell"]

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error2 = { version = "2.0.1", optional = true }
syn = { version = "2.0", features = ["full"] }
itertools = { version = "0.14", optional = true }
regex = { version = "1.4", optional = true }
once_cell = { version = "1.0", optional = true }
