[package]
name = "ulua-sys"
version = "0.8.5"
authors = ["Luc Rodriguez <labs@rhodem.com>"]
rust-version = "1.71"
edition = "2021"
repository = "https://github.com/rhodem-labs/ulua"
documentation = "https://docs.rs/ulua-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
license = "MIT"
links = "lua"
build = "build/main.rs"
description = "Low level (FFI) bindings to Luau"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
vector4 = []

[dependencies]

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
pkg-config = "0.3.17"
luau0-src = "0.15.6"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(raw_dylib)'] }
